--- a/Core/View/Tab/RefundFacturaProveedor.html.twig
+++ b/Core/View/Tab/RefundFacturaProveedor.html.twig
@@ -85,7 +85,7 @@
                                 <div class="form-group">
                                     {{ trans('status') }}
                                     <select name="idestado" class="form-control">
-                                        {% for status in firstView.model.getAvailableStatus(firstView.model.modelClassName()) %}
+                                        {% for status in firstView.model.getAvailableStatus() %}
                                             {% if status.idestado is same as(22) %}
                                                 <option value="{{ status.idestado }}" selected>
                                                     {{ status.nombre }}
