--- a/Core/View/Macro/GoogleTagManager.html.twig
+++ b/Core/View/Macro/GoogleTagManager.html.twig
@@ -19,8 +19,8 @@
 #}
 
 {% macro body() %}
-    {% set googleTagManager = constant('GOOGLE_TAG_MANAGER') ?? 'GTM-53H8T9BL' %}
-    {% if settings('default', 'google_tag_manager', false) and googleTagManager is not empty %}
+    {% set googleTagManager = constant('GOOGLE_TAG_MANAGER') ?? '' %}
+    {% if googleTagManager is not empty %}
         <!-- Google Tag Manager (noscript) -->
         <noscript>
             <iframe src="https://www.googletagmanager.com/ns.html?id={{ googleTagManager }}" height="0" width="0"
@@ -31,8 +31,8 @@
 {% endmacro %}
 
 {% macro head() %}
-    {% set googleTagManager = constant('GOOGLE_TAG_MANAGER') ?? 'GTM-53H8T9BL' %}
-    {% if settings('default', 'google_tag_manager', false) and googleTagManager is not empty %}
+    {% set googleTagManager = constant('GOOGLE_TAG_MANAGER') ?? '' %}
+    {% if googleTagManager is not empty %}
         <!-- Google Tag Manager -->
         <script>(function (w, d, s, l, i) {
                 w[l] = w[l] || [];
