--- a/Core/View/AdminPlugins.html.twig
+++ b/Core/View/AdminPlugins.html.twig
@@ -54,6 +54,23 @@
                         <span class="d-none d-sm-inline-block">{{ trans('rebuild') }}</span>
                     </a>
                 </div>
+                <div class="btn-group">
+                    <button class="btn btn-spin-action btn-sm btn-success" type="button" data-toggle="modal"
+                            data-target="#modalMassAddPlugins">
+                        <i class="fas fa-plus-square fa-fw" aria-hidden="true"></i>
+                        <span class="d-none d-sm-inline-block">{{ trans('mass-add-plugins') }}</span>
+                    </button>
+                </div>
+                <div class="btn-group">
+                    <form action="{{ fsc.url() }}" method="POST">
+                        {{ formToken() }}
+                        <input type="hidden" name="action" value="disable-all-plugins">
+                        <button class="btn btn-spin-action btn-sm btn-dark" type="submit">
+                            <i class="fas fa-minus-square fa-fw"></i>
+                            <span class="d-none d-sm-inline-block">{{ trans('disable-all-plugins') }}</span>
+                        </button>
+                    </form>
+                </div>
             </div>
             <div class="col-sm text-right">
                 <h1 class="h3">
@@ -145,6 +162,34 @@
             </div>
         </form>
     {% endif %}
+
+    <div class="modal" id="modalMassAddPlugins" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">{{ trans('mass-add-plugins') }}</h5>
+                    <button type="button" class="close" data-dismiss="modal">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form action="{{ fsc.url() }}" method="POST" id="mass-add-plugins-form">
+                        {{ formToken() }}
+                        <input type="hidden" name="action" value="mass-add-plugins">
+                        <div class="form-group">
+                            <label for="plugins-list">{{ trans('plugins-list') }}</label>
+                            <input type="text" class="form-control" id="plugins-list" name="plugins-list" autocomplete="off">
+                            <small class="form-text text-muted">Listado de plugins a instalar ordenados y separados por coma(ej: Backup,Anticipos,PrintTicket).</small>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">{{ trans('close') }}</button>
+                    <button type="submit" form="mass-add-plugins-form" class="btn btn-primary">{{ trans('continue') }}</button>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block javascripts %}
