--- a/Core/View/AdminPlugins.html.twig
+++ b/Core/View/AdminPlugins.html.twig
@@ -18,10 +18,10 @@
  */
 #}
 {% extends "Master/MenuBghTemplate.html.twig" %}
+{% import 'Macro/Utils.html.twig' as Utils %}
 
 {% block bodyHeaderOptions %}
     {{ parent() }}
-    {% import 'Macro/Utils.html.twig' as Utils %}
     <div class="container-fluid mb-2">
         <div class="row">
             <div class="col-sm-6">
@@ -63,7 +63,6 @@
                 </h1>
             </div>
         </div>
-        {{ Utils.registerInstall() }}
     </div>
     <ul class="nav nav-tabs" role="tablist">
         <li class="nav-item">
@@ -93,6 +92,11 @@
     <div class="tab-content">
         <div class="tab-pane fade show active" id="installed" role="tabpanel">
             {{ _self.showInstalledPlugins(fsc) }}
+            {% if fsc.registered == false %}
+                <div class="ml-2 mt-3 mr-2 mb-3">
+                    {{ Utils.registerInstall() }}
+                </div>
+            {% endif %}
         </div>
         {% if config('disable_add_plugins', false) == false %}
             <div class="tab-pane fade" id="all" role="tabpanel">
